public/styles.css
/* ... */
@media screen and (min-height: 649px) and (max-width: 425px),
screen and (min-height: 631px) and (min-width: 426px) {
    x-peers:has(> x-peer) {
        --peers-per-row: 3;
    }

    x-peers:has(> x-peer:nth-of-type(10)) {
        --peers-per-row: 4;
    }

    x-peers:has(> x-peer:nth-of-type(13)) {
        --peers-per-row: 5;
    }

    x-peers:has(> x-peer:nth-of-type(16)) {
        --peers-per-row: 6;
    }

    x-peers:has(> x-peer:nth-of-type(19)) {
        --peers-per-row: 7;
    }

    x-peers:has(> x-peer:nth-of-type(22)) {
        --peers-per-row: 8;
    }

    x-peers:has(> x-peer:nth-of-type(25)) {
        --peers-per-row: 9;
    }

    x-peers:has(> x-peer:nth-of-type(28)) {
        --peers-per-row: 10;
    }
}

::-webkit-scrollbar {
    display: none;
}

/* Empty Peers List */

x-no-peers {
    display: flex;
    flex-direction: column;
    padding: 8px;
    height: 137px;
    text-align: center;
}

x-no-peers h2,
x-no-peers a {
    color: var(--primary-color);
    margin-bottom: 5px;
}

x-peers:not(:empty)+x-no-peers {
    display: none;
}

x-no-peers::before {
    color: var(--primary-color);
    font-size: 24px;
    font-weight: 400;
    letter-spacing: -.012em;
    line-height: 32px;
}

x-no-peers[drop-bg]::before {
    content: attr(data-drop-bg);
}

x-no-peers[drop-bg] * {
    display: none;
}



/* Peer */

x-peer {
    padding: 8px;
    align-content: start;
    flex-wrap: wrap;
}

x-peer label {
    width: var(--peer-width);
    touch-action: manipulation;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    position: relative;
}

input[type="file"] {
    visibility: hidden;
    position: absolute;
}

x-peer x-icon {
    --icon-size: 40px;
    margin-bottom: 4px;
    transition: transform 150ms;
    will-change: transform;
    display: flex;
    flex-direction: column;
}

x-peer .icon-wrapper {
    width: var(--icon-size);
    padding: 12px;
    border-radius: 50%;
    background: var(--primary-color);
    color: white;
    display: flex;
}

x-peer.type-secret .icon-wrapper {
    background: var(--paired-device-color);
}

x-peer:not(.type-ip):not(.type-secret).type-public-id .icon-wrapper {
    background: var(--public-room-color);
}

x-peer x-icon > .highlight-wrapper {
    align-self: center;
    align-items: center;
    margin: 7px auto 0;
    height: 6px;
}

x-peer x-icon > .highlight-wrapper > .highlight {
    width: 15px;
    height: 6px;
    border-radius: 4px;
    margin-left: 1px;
    margin-right: 1px;
    display: none;
}

x-peer.type-ip x-icon > .highlight-wrapper > .highlight.highlight-room-ip {
    background-color: var(--primary-color);
    display: inline;
}

x-peer.type-secret x-icon > .highlight-wrapper > .highlight.highlight-room-secret {
    background-color: var(--paired-device-color);
    display: inline;
}

x-peer.type-public-id x-icon > .highlight-wrapper > .highlight.highlight-room-public-id {
    background-color: var(--public-room-color);
    display: inline;
}

x-peer:not([status]):hover x-icon,
x-peer:not([status]):focus x-icon {
    transform: scale(1.05);
}

x-peer[status] x-icon {
    box-shadow: none;
    opacity: 0.8;
    transform: scale(1);
}

.device-descriptor {
    width: 100%;
    text-align: center;
}

.device-descriptor > div {
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: center;
}

.status,
.device-name,
.connection-hash {
    opacity: 0.7;
}

.device-name {
    font-size: 14px;
    white-space: nowrap;
}

.connection-hash {
    font-size: 12px;
    white-space: nowrap;
}

x-peer:not([status]) .status,
x-peer[status] .device-name {
    display: none;
}

x-peer[status] {
    pointer-events: none;
}

x-peer x-icon {
    animation: pop 600ms ease-out 1;
}

@keyframes pop {
    0% {
        transform: scale(0.7);
    }

    40% {
        transform: scale(1.2);
    }
}

x-peer[drop] x-icon {
    transform: scale(1.1);
}



/* Footer */

footer {
    position: relative;
    z-index: 2;
    align-items: center;
    text-align: center;
    cursor: default;
    margin: auto 5px 5px;
}

footer .logo {
    --icon-size: 80px;
    margin-bottom: 8px;
    color: var(--primary-color);
    margin-top: -10px;
}

.discovery-wrapper {
    font-size: 12px;
    margin: 10px auto auto;
    border: 3px solid var(--border-color);
    border-radius: 0.5rem;
    padding: 2px;
    background-color: rgb(var(--bg-color));
    transition: background-color 0.5s ease;
    min-height: 24px;
}

/*You can be discovered wrapper*/
.discovery-wrapper > div:first-of-type {
    padding-left: 4px;
    padding-right: 4px;
}


.discovery-wrapper .badge {
    word-break: keep-all;
    margin: 2px;
}

.badge {
    border-radius: 0.3rem/0.3rem;
    padding-right: 0.3rem;
    padding-left: 0.3em;
    background-color: var(--badge-color);
    color: white;
    transition: background-color 0.5s ease;
    white-space: nowrap;
}

.badge-room-ip {
    background-color: var(--primary-color);
    border-color: var(--primary-color);
}

.badge-room-secret {
    background-color: var(--paired-device-color);
    border-color: var(--paired-device-color);
}

.badge-room-public-id {
    background-color: var(--public-room-color);
    border-color: var(--public-room-color);
}

#display-name {
    position: relative;
    display: inline-block;
    text-align: left;
    border: none;
    outline: none;
    max-width: 15em;
    text-overflow: ellipsis;
    cursor: text;
    margin-bottom: -6px;
    padding-bottom: 0.1rem;
    border-radius: 1.3rem/30%;
    border-right: solid 1rem transparent;
    border-left: solid 1rem transparent;
    background-clip: padding-box;
    overflow: hidden;
    z-index: 1;
}

#edit-pen {
    width: 1rem;
    height: 1rem;
    margin-bottom: -2px;
    position: relative;
}

html:not([dir="rtl"]) #display-name,
html:not([dir="rtl"]) #edit-pen {
    margin-left: -1rem;
}

html[dir="rtl"] #display-name,
html[dir="rtl"] #edit-pen {
    margin-right: -1rem;
}
/* ... */

